--- a/deployments/nginx/nginx.conf
+++ b/deployments/nginx/nginx.conf
@@ -12,9 +12,9 @@ server {
   }
   add_header 'Access-Control-Allow-Origin' '*';
   
-  location / {
+  location /pasarela/ {
     root /usr/share/nginx/html;
     index index.html;
-    try_files $uri $uri/ /index.html;
+    try_files $uri $uri/ /pasarela/index.html;
   }
 }
